# featbit

./: .gitignore  CLAUDE.md  CONTRIBUTING-tests.md  Configure-FeatBitIngress.ps1  DEPLOYMENT.md  Deploy-FeatBitClusters.ps1  Deploy-FeatBitMultiCluster.ps1  Import-DeploymentEnv.ps1  Initialize-MongoDBReplicaSet.ps1  MANUAL-SETUP.txt  Set-InfraImages.ps1  Start-NetworkingTest.ps1  Stop-PortForwards.ps1  Test-WSL2-Networking.sh  claude.md  deployment.env.example
control-plane-qa/02-Tests/automation-py/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  run-cp09.ps1  run_cp09.py
control-plane-qa/02-Tests/automation-py/cli/: main.py
control-plane-qa/02-Tests/automation-py/core/: __init__.py  api_client.py  assertions.py  auth.py  dashboard.py  k6_runner.py  models.py  port_forwarder.py  scenario_base.py
control-plane-qa/02-Tests/automation-py/scenarios/: __init__.py  consistency_base.py  cp01.py  cp02.py  cp03.py  cp04.py  cp05.py  cp06.py  cp07.py  cp08.py  cp09.py  cp10.py  cp11.py  cp12.py  cp13.py  cp14.py  cp15.py
control-plane-qa/02-Tests/automation-py/scripts/: provision_uat.py  seed_data.py
control-plane-qa/02-Tests/automation-py/tests/: test_api_client_retry.py  test_cp03_manifest_path.py  test_cp03_outage_semantics.py  test_cp06_environment_state.py  test_cp07_license_skip.py  test_cp09_cli_flags.py  test_cp09_purge_scoping.py  test_cp09_websocket_helpers.py  test_cp14_phase_gating.py  test_cross_dc_partition_manifests.py  test_env_secrets.py  test_k6_runner.py  test_kafka_pod_discovery.py  test_port_forwarder.py  test_redis_check_polling.py  (+4 more)
(+633 files in other folders)
